--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Project Title</title>
-  <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="pict/fav/favicon.ico" type="image/x-icon">
+  <link rel="apple-touch-icon" href="pict/fav/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="pict/fav/touch-icon-ipad.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="pict/fav/touch-icon-iphone-retina.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="pict/fav/touch-icon-ipad-retina.png">
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.min.css">
 </head>
