--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,6 @@
   
   
 
-  <script src="js/main.js" type="text/javascript"></script>
+  <script src="js/main.min.js" type="text/javascript"></script>
 </body>
 </html>
